# shlimpbot

./: .gitignore  README.md  pyproject.toml  settings_example.json  settings_example.yaml
shlimpbot/: LICENSE.md  bot.py  checks.py  config.py
shlimpbot/cogs/: config.py  time.py
shlimpbot/cogs/wordle/: wordle.py
shlimpbot/utilities/: utilities.py
shlimpbot/wordle/: wordle.py
