[tool.poetry]
name = "shlimpbot"
version = "0.1.0"
description = ""
authors = ["MoxAmber <amber@splorts.fish>"]
[tool.poetry.dependencies]
python = ">=3.9, <3.10"
nextcord = "^2.0.0-alpha.8"
jsonpath-ng = "^1.5.3"
pendulum = "^2.1.2"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
shlimpbot = "shlimpbot.bot:run"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
